--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "boostly_mobile",
-    "slug": "boostly_mobile",
+    "slug": "boostly",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
@@ -31,6 +31,12 @@
     ],
     "experiments": {
       "typedRoutes": true
-    }
+    },
+    "extra": {
+      "eas": {
+        "projectId": "3deec935-05ad-4e75-8917-c67a2b05f1b1"
+      }
+    },
+    "owner": "irenetrecu"
   }
 }
